# dernier-teste-

./: .eslintrc.json  .gitignore  .replit  CORRECTIONS.md  README.md  VARIABLES_ENVIRONNEMENT.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  supabase-init.sql  test-auth.js  test-debug.js  tsconfig.json  vercel.json
api/: __init__.py  index.py
cbd-boutique/: eslint.config.mjs  package-lock.json  package.json
cbd-boutique/src/app/: page.tsx
cbd-boutique/src/app/api/auth/: route.ts
cbd-boutique/src/components/: Header.tsx  ProductCard.tsx
cbd-boutique/src/data/: config.json  products.json
cbd-boutique/src/lib/: data.ts
cbd-boutique/src/types/: index.ts
public/uploads/: .gitkeep
scripts/: generate-admin-password.js
src/app/: globals.css  layout.tsx  page.tsx
src/app/admin/: page.tsx
src/app/admin/dashboard/: page.tsx
src/app/api/config/: route.ts
src/app/api/products/: route.ts
src/app/produit/[slug]/: page.tsx
src/app/produits/: page.tsx
src/app/produits/[id]/: page.tsx
src/app/reseaux-sociaux/: page.tsx
src/components/: CategorySlider.tsx  DebugPanel.tsx  Footer.tsx  Header.tsx  ProductCard.tsx
src/components/providers/: ShopConfigProvider.tsx
src/components/ui/: Button.tsx  Card.tsx  Input.tsx
src/lib/: auth.ts  cloudinary.ts  supabase.ts  utils.ts
src/types/: index.ts
templates/: admin_dashboard.html  admin_login.html  base.html  dynamic_page.html  edit_page.html  edit_product_page.html  edit_social_link.html  index.html  product_detail.html
tests/: __init__.py  test_api.py
(+21 files in other folders)
